refactor: (#166) 가독성을 위한 코드 컨벤션 수정